feat: complete security overhaul with JWT backend and authenticated frontend API